# fiken-py

./: .gitignore  .ruff.toml  LICENSE  README.md  mypy.ini  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
src/fikenpy/: __init__.py  _version.py  auth.py  client_async.py  client_base.py  client_sync.py  exceptions.py  models.py
tests/: __init__.py  conftest.py  test_client_async.py  test_client_sync.py
